v1.0.9
- Fix issue where existing screensaver file is never over-written
- Add message if sceeensaver video failed to download correctly

v1.0.8
- Add additional beach, matrix, sci-fi, space, waterfall and woodland screensavers
- Add special check to see if TvTunes is still running

v1.0.7
- Move screensaver videos to different host
- Add beach and space screensaver

v1.0.6
- Add option to stop the screensaver after a set amount of time
- Give time for other programs to stop before starting screensaver
- Support repeating just a single video from a folder

v1.0.5
- Handle error if screensaver video not set
- Prevent black screen if playing media when screensaver launches

v1.0.4
- Add option to change the volume
- Allow the screen to be dimmed during the screensaver video

v1.0.3
- Add option to prevent the screensaver starting if playing media already
- Turn off repeat when exiting the screensaver

v1.0.2
- Fix error getting file details

v1.0.1
- Add option to use multiples video files

v1.0.0
- Initial Version